[package]
name = "tokio-diesel-v2"
version = "0.1.0"
authors = ["Oliver Cooper <...>"]
edition = "2018"

[dependencies]
tokio-diesel = "0.3.0"
diesel = { git = "https://github.com/diesel-rs/diesel", default-features = false, features = ["postgres", "r2d2"] }
tokio = { version = ">=0.2.21", default-features = false, features = [ "full" ] }